--- a/日志.md
+++ b/日志.md
@@ -29,6 +29,7 @@ log.20200405.010250.log
 - 请求服务IP：fromIp
 - 协议名：http，grpc，tcp，udp，thrift
 - 日志文件：__filename__ 如果有
+- 处理时长：xxx ms
 
 ### 文件内容-执行结束
 - 时间：年-月-日 时:分:秒:毫秒
@@ -42,6 +43,7 @@ log.20200405.010250.log
 - 协议名：http，grpc，tcp，udp，thrift
 - 日志文件：__filename__ 如果有
 - 返回状态：完成
+- 处理时长：xxx ms
 - 返回内容：data={}
 
 ### 文件内容-错误日志
@@ -56,4 +58,5 @@ log.20200405.010250.log
 - 协议名：http，grpc，tcp，udp，thrift
 - 日志文件：__filename__ 如果有
 - 返回状态：错误 | 异常
+- 处理时长：xxx ms
 - 错误内容：data={}
