--- a/日志.md
+++ b/日志.md
@@ -57,6 +57,6 @@ log.20200405.010250.log
 - 请求服务IP：fromIp
 - 协议名：http，grpc，tcp，udp，thrift
 - 日志文件：__filename__ 如果有
-- 返回状态：错误 | 异常
+- 返回状态：错误 | 警告 | 异常
 - 处理时长：xxx ms
 - 错误内容：data={}
